fixed scrollbars

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -2,7 +2,7 @@
 
 .screen-container {
   height: 100%;
-  overflow: scroll;
+  overflow-y: auto;
   padding: 80px 40px;
 }
 
