--- a/src/scss/_gameEvents.scss
+++ b/src/scss/_gameEvents.scss
@@ -6,7 +6,7 @@
   padding-top: 20px;
   padding-bottom: 100px;
   width: 30%;
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
