--- a/src/scss/_gameTable.scss
+++ b/src/scss/_gameTable.scss
@@ -5,7 +5,7 @@
   padding: 0 20px 60px 0;
   width: 60%;
   height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .table {
